post head desktop

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -48,13 +48,9 @@
 	}
 
 	.post-header {
-		margin: 0 0 60px;
-		text-align: center;
-		@media(max-width: @tablet-breakpoint) {
-			margin-bottom: 40px;
-		}
+		margin: 40px 0;
+		text-align: left;
 		@media(max-width: @mobile-breakpoint) {
-			text-align: left;
 			padding: 0;
 			margin: 30px 0;
 			order: 1;
@@ -65,9 +61,7 @@
 		line-height: 1;
 		height: auto;
 		overflow: hidden;
-		max-height: 453px;
 		margin: 0;
-	  border-radius: 3px;
 		@media(max-width: @tablet-breakpoint) {
 			height: unset;
 			max-height: 356px;
@@ -112,7 +106,7 @@
 
 	.excerpt {
 		font-weight: 600;
-		font-size: 1.2em;
+		font-size: 1.3em;
 		margin: 5px 0 0;
 		line-height: 1.3;
 		color: @h1-color;
@@ -187,9 +181,6 @@
 				font-weight: 300;
 				font-family: @body-font;
 				-webkit-font-smoothing: auto;
-				@media(max-width: @mobile-breakpoint) {
-					font-size: 0.95em;
-				}
 			}
 
 			a {
