--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -86,6 +86,9 @@ nav {
 				transition: @transition;
 				display: flex;
 				justify-content: center;
+				@media(max-width: @mobile-breakpoint) {
+					  margin-right: 20px;
+				}
 
 				&>a {
 					display: block;
