--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,12 +1,11 @@
 #seriesposts {
-  margin: 0 0 20px;
+  margin: 20px 0;
   padding: 0;
   display: none;
   position: relative;
   overflow-x: hidden;
   padding-bottom: 20px;
   border-bottom: 1px solid #e0ebee;
-  margin-top: 10px;
   @media(max-width: @tablet-breakpoint) {
     margin: 10px 0 20px;
     padding: 0 0 20px;
