added donate to footer

--- a/partials/footer/footer-links.hbs
+++ b/partials/footer/footer-links.hbs
@@ -7,6 +7,7 @@
     <li><a href="{{@site.url}}/projects/">Projects</a></li>
     <li><a href="{{@site.url}}/resources/">Resources</a></li>
     <li><a href="{{@site.url}}/become-a-contributor/">Join The Club</a></li>
+    <li><a href="https://www.patreon.com/hackersandslackers">Donate</a></li>
   </ul>
 </div>
 <!-- End Links Widget -->
