--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -2,7 +2,7 @@
 
 .post-archive {
   .postlist {
-    width: 100%;
+    width: -webkit-fill-available;
     display: grid;
     grid-gap: 30px;
     grid-template-columns: 1fr 1fr 1fr;
