--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -113,8 +113,8 @@
     background-color: #747d9a !important;
   }
 
-  .javascript {
-    background-color: #ad8303 !important;
+  &.javascript {
+    background-color: #e6bb00 !important;
   }
 
   &.saas {
