--- a/series.hbs
+++ b/series.hbs
@@ -1,30 +1,28 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-<section class="content-wrap series-template {{body_class}}">
-	<div class="page-container sidebar-layout">
-		<!-- start main post area -->
-		<div class="main-content">
-			<div class="postlist">
-				<!-- start sorting widget -->
-				<div class="sort-container">
-					<div class="sort">
-						<span class="sort-title">Sort</span> <span class="asc">asc</span> <span class="desc">desc</span> <i class="far d fa-arrow-to-bottom"></i>
-					</div>
+<div class="page-container series-template sidebar-layout">
+	<!-- start main post area -->
+	<div class="main-content">
+		<div class="postlist">
+			<!-- start sorting widget -->
+			<div class="sort-container">
+				<div class="sort">
+					<span class="sort-title">Sort</span> <span class="asc">asc</span> <span class="desc">desc</span> <i class="far d fa-arrow-to-bottom"></i>
 				</div>
-				<!-- end sorting widget -->
-				<main class="sorted-series">
-						{{> cover-tag}}
-						{{#foreach posts}}
-							{{> seriespreview}}
-						{{/foreach}}
-				</main>
 			</div>
+			<!-- end sorting widget -->
+			<main class="sorted-series">
+				{{> cover-tag}}
+				{{#foreach posts}}
+					{{> seriespreview}}
+				{{/foreach}}
+			</main>
 		</div>
-		{{! insert sidebar partial}}
-		{{> sidebar}}
 	</div>
-</section>
+	{{! insert sidebar partial}}
+	{{> sidebar}}
+</div>
 {{#contentFor "scripts"}}
 	<script async src="{{asset "js/series.js"}}"></script>
 {{/contentFor}}
