--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -1,6 +1,6 @@
 .page-container {
 	max-width: 1100px;
-	margin: 40px auto 0;
+	margin: 40px auto;
 	@media(max-width: 1200px) {
 		width: 100%;
 	}
