--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -8,10 +8,16 @@
         </a>
       {{/if}}
 
-      <div class="dropdown about">
-        <a href="{{@site.url}}/about/"><button>About</button></a>
+      <div class="dropdown authors">
+        <a href="{{@site.url}}/about/"><button>Authors</button></a>
+        <div class="dropdown-content">
+          {{#get "authors" limit="all" order="count.posts desc" }}
+            {{#foreach authors}}
+              <a href="{{url}}">{{name}}</a>
+            {{/foreach}}
+          {{/get}}
+        </div>
       </div>
-
 
       <div class="dropdown posts">
         <a href="{{@site.url}}/archive/"><button>Posts</button></a>
@@ -49,6 +55,10 @@
     </div>
 
     <div class="right-desktop-nav">
+      <div class="dropdown about">
+        <a href="{{@site.url}}/about/"><button>About</button></a>
+      </div>
+
       <a href="https://www.patreon.com/hackersandslackers">
         <button class="donate-btn">Donate</button>
       </a>
