--- a/src/less/author/website.less
+++ b/src/less/author/website.less
@@ -1,78 +1,55 @@
-.author-template{
-  .sidebar{
-    .author-website,
-		.website {
-			content {
-				overflow: hidden;
-				padding: 0;
-			}
+.author-template .sidebar {
+  .website {
+    .website-preview {
+      transition: @transition;
+      border: 1px solid #e6e6e6;
+      border-radius: 3px;
 
-			& > a {
-				display: block;
-				overflow: hidden;
-				margin: 5px 0 0;
-			}
+      &:hover {
+        cursor: pointer;
+        background: @hover-color;
+        border: 1px solid @hover-color;
 
-			.link-preview {
-				height: 167px;
-				background-size: cover !important;
-				color: white;
-				position: relative;
-				margin: 0;
-				border: 0;
-				border-radius: 0;
-        overflow: hidden;
-
-        &:hover {
-          cursor: pointer;
-        }
-
-				h4 {
-					position: absolute;
-					bottom: 12px;
-					left: 15px;
-					color: white;
-					z-index: 10;
-					width: 79%;
-					line-height: 1;
-					overflow: hidden;
-					text-overflow: ellipsis;
-					display: block;
-					white-space: nowrap;
-					font-size: 15px;
-					font-family: @body-font;
-					margin: 0;
-				}
-
-				.link-name {
-          text-decoration: none;
+        * {
           color: white;
-          bottom: 5px;
-          position: absolute;
-          z-index: 10;
-          left: 10px;
         }
+      }
+    }
 
-				i {
-					position: absolute;
-					right: 12px;
-					bottom: 12px;
-					z-index: 100;
-					font-size: 14px;
-					color: white;
-				}
+    .website-image {
+      height: 150px;
+      background-size: cover !important;
+      color: white;
+      position: relative;
+      margin: 0;
+      border: 0;
+      border-radius: 2px 2px 0 0;
+      overflow: hidden;
 
-				&::after {
-					display: block;
-					position: absolute;
-					background-image: linear-gradient(to bottom, transparent 0%, @theme-color 100%);
-					height: 100%;
-					width: 105%;
-					top: 0;
-					left: 0;
-					content: '';
-				}
-			}
-		}
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .website-details {
+      padding: 15px;
+
+
+      * {
+        color: @h1-color;
+      }
+
+      .website-title {
+        font-size: 1.35em;
+        line-height: 1;
+        display: block;
+      }
+
+      .website-description {
+        font-size: 1em;
+        margin-bottom: 0;
+        line-height: 1.4;
+      }
+    }
   }
 }
