author rss widget refactor

--- a/partials/author/widget-meetup.hbs
+++ b/partials/author/widget-meetup.hbs
@@ -2,7 +2,7 @@
 {{#if "website"}}
   <div class="widget meetup">
     <h4 class="title">Meetup</h4>
-    <div class="events"></div>
+    <div class="meetup-events"></div>
   </div>
 {{/if}}
 <!-- End Meetup Widget -->
