--- a/src/less/author/meetup.less
+++ b/src/less/author/meetup.less
@@ -15,8 +15,8 @@
       margin-bottom: 30px;
     }
 
-    .events {
-      .event {
+    .meetup-events {
+      .meetup-event {
         border-bottom: 1px solid #e8e8e8;
         padding: 20px 0;
 
@@ -43,7 +43,7 @@
           }
         }
 
-        .event-name {
+        .meetup-event-name {
           color: @theme-color;
           font-family: 'TTNormsPro-Medium', sans-serif;
           margin-bottom: 10px;
