--- a/src/less/author/website.less
+++ b/src/less/author/website.less
@@ -46,8 +46,8 @@
       }
 
       .website-description {
-        font-size: 1em;
-        margin-bottom: 0;
+        font-size: .9em;
+        margin: 10px 0 0;
         line-height: 1.4;
       }
     }
