--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -1,4 +1,8 @@
 .author-template {
+  .author-github {
+    display: none;
+  }
+  
   #github-card-author {
     width: 100%;
     font-size: 16px;
