horizontal scroll for mobile code snippets

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -107,6 +107,7 @@ nav {
 					color: #626573;
 					border: none;
 					outline: none;
+					transition: @transition;
 
 					&:hover {
 						color: @theme-color;
