post head margins

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -7,6 +7,9 @@
 
 		.nav-wrapper {
 			max-width: 884px;
+			@media(max-width: @tablet-breakpoint) {
+				max-width: 90%;
+			}
 			@media(max-width: @mobile-breakpoint) {
 				width: 85%;
 				margin: auto;
