--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -2,7 +2,7 @@
 
   .post-meta {
     margin: 20px 0 0;
-    color: lighten(@text-color, 10%);
+    color: #787c87;
     font-size: 12px;
     display: flex;
     width: auto;
@@ -64,7 +64,7 @@
     align-items: center;
     text-transform: capitalize;
     line-height: 1;
-    margin: 0 20px 0 0 !important;
+    margin: 0 25px 0 0 !important;
 
     * {
       font-size: .9em;
