--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,5 +1,5 @@
 #seriesposts {
-  margin: 20px 0;
+  margin: 20px 0 0;
   padding: 0;
   display: none;
   position: relative;
@@ -7,11 +7,7 @@
   padding-bottom: 20px;
   border-bottom: 1px solid #e0ebee;
   @media(max-width: @tablet-breakpoint) {
-    margin: 10px 0 20px;
     padding: 0 0 20px;
-  }
-  @media(max-width: @mobile-breakpoint) {
-    margin: 20px 0 20px;
   }
 
   h5 {
