after post styles

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -237,7 +237,6 @@
 					}
 
 					&::before {
-						color: darken(@theme-color, 5%);
 						display: inline-block;
 						font-style: normal;
 						font-variant: normal;
@@ -245,7 +244,7 @@
 						-webkit-font-smoothing: antialiased;
 						padding-left: 0;
 						font-family: "Font Awesome 5 Pro";
-						content: '\f04b';
+						content: '\f219';
 						font-size: 9px;
 						margin-right: 9px;
 						font-weight: 500;
