post head margins

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -40,7 +40,7 @@ nav {
 
 		.left-desktop-nav,
 		.right-desktop-nav {
-			@media(max-width: @mobile-breakpoint) {
+			@media(max-width: @tablet-breakpoint) {
 				display: none !important;
 			}
 		}
@@ -86,7 +86,7 @@ nav {
 				transition: @transition;
 				display: flex;
 				justify-content: center;
-				@media(max-width: @mobile-breakpoint) {
+				@media(max-width: @tablet-breakpoint) {
 					  margin-right: 20px;
 				}
 
