--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -8,12 +8,12 @@
 		.nav-wrapper {
 			max-width: 884px;
 			@media(max-width: @tablet-breakpoint) {
-				max-width: 90%;
+				max-width: 88%;
 			}
 			@media(max-width: @mobile-breakpoint) {
-				width: 85%;
-				margin: auto;
-				max-width: 882px;
+				width: auto;
+    		margin: auto 30px;
+    		max-width: unset;
 			}
 		}
 	}
@@ -67,7 +67,6 @@
 		margin: 0;
 		@media(max-width: @tablet-breakpoint) {
 			height: unset;
-			max-height: 356px;
 		}
 		@media (max-width: 600px) {
 			margin-left: calc(-50vw + 50%) !important;
@@ -89,7 +88,7 @@
 
 	.post-title {
 		width: -webkit-fill-available;
-		margin: 0 0 5px;
+		margin: 0;
 		display: block;
 		font-family: @header-font-bold !important;
 		font-size: 2.2em;
@@ -110,7 +109,7 @@
 	.excerpt {
 		font-weight: 600;
 		font-size: 1.3em;
-		margin: 5px 0 0;
+		margin: 0;
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: @header-font;
