--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -40,7 +40,7 @@ nav {
 
 		.left-desktop-nav,
 		.right-desktop-nav {
-			@media(max-width: @tablet-breakpoint) {
+			@media(max-width: @mobile-breakpoint) {
 				display: none !important;
 			}
 		}
