--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -113,6 +113,7 @@
         order: 0;
         margin-right: 15px;
         overflow: hidden;
+        border-radius: 2px;
         @media(max-width: 600px) {
           margin: 0 0 20px;
           background-size: cover;
