--- a/partials/author/author-sidebar.hbs
+++ b/partials/author/author-sidebar.hbs
@@ -5,6 +5,7 @@
 	{{!--{{> author/widget-medium}}--}}
 	{{> author/widget-meetup}}
 	{{> author/widget-rss}}
+  {{> author/widget-pocket}}
 	{{#has slug="todd"}}
 		{{> author/widget-authortwitter}}
 	{{else}}
