protip code padding

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -431,11 +431,11 @@
 				}
 
 				pre {
-					margin: 15px auto 10px;
+					margin: 15px auto 10px !important;
 				}
 
 				pre > code {
-					padding: 46px 19px 12px;
+					padding: 12px 19px;
 					border-radius: 3px;
 					white-space: normal;
 					background: #f1dbc6;
