--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -22,11 +22,11 @@
 .tags,
 .primary-tag {
   &.nodejs {
-    background-color: #598708 !important;
+    background-color: #76b507 !important;
   }
 
   &.aws {
-    background-color: #c37a32 !important;
+    background-color: #de8125 !important;
   }
 
   &.django {
@@ -38,7 +38,7 @@
   }
 
   &.sql {
-    background-color: #687ea5 !important;
+    background-color: #6a86b8 !important;
   }
 
   &.restapis {
@@ -62,7 +62,7 @@
   }
 
   &.devops {
-    background-color: #495f6d !important;
+    background-color: #3d5666 !important;
   }
 
   &.pandas {
@@ -73,12 +73,8 @@
     background-color: #1990f5 !important;
   }
 
-  .mysql {
-    background-color: #7a588e !important;
-  }
-
   &.datascience {
-    background-color: #449a8c !important;
+    background-color: #5ecacc !important;
   }
 
   &.tableau {
@@ -106,7 +102,7 @@
   }
 
   &.dataengineering {
-    background-color: #4c5777 !important;
+    background-color: #757e98 !important;
   }
 
   &.codesnippetcorner {
@@ -138,7 +134,7 @@
   }
 
   &.graphql {
-    background-color: #bc6391;
+    background-color: #d56fa4;
   }
 
   &.apache {
@@ -155,5 +151,9 @@
 
   &.data-warehousing {
     background-color: #9597cb;
+  }
+
+  &.mysql {
+    background-color: #6160ef;
   }
 }
