protip code background

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -421,7 +421,7 @@
 				code {
 					border-radius: 3px;
 					white-space: normal;
-					background: #f1dbc6;
+					background: #ffe5cb;
 					padding: 3px 5px;
 					color: #8b572b;
 					text-shadow: unset;
@@ -438,7 +438,7 @@
 					padding: 12px 19px;
 					border-radius: 3px;
 					white-space: normal;
-					background: #f1dbc6;
+					background: #ffe5cb;
 					color: #8b572b;
 
 					&:before {
