protip code mobile width

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -432,6 +432,9 @@
 
 				pre {
 					margin: 15px auto 10px !important;
+					@media(max-width: @mobile-breakpoint) {
+						  min-width: 100% !important;
+					}
 				}
 
 				pre > code {
