--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -10,10 +10,11 @@
     @media(max-width: @tablet-breakpoint) {
       grid-template-columns: 1fr 1fr;
       max-width: 90%;
+      margin: 0 auto 30px;
     }
     @media(max-width: @mobile-breakpoint) {
       grid-template-columns: 1fr;
-      margin: 20px auto;
+      margin: 0 auto;
       max-width: 85%;
     }
 
