--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -64,7 +64,7 @@
 
 	.recent-single-post {
 		.post-title {
-			color: lighten(@grey-header, 15%);
+			color: #626573;
 			line-height: 1.2;
 			font-size: 15px;
 			margin: 0;
