--- a/src/less/series.less
+++ b/src/less/series.less
@@ -3,5 +3,8 @@
 @import './global/mixin.less';
 
 /* Series Styles */
-@import './etc/series.less';
+@import './pages/series-posts.less';
 @import './pages/page.less';
+
+/* Series Archive Styles */
+@import './pages/series-archive.less';
