render-blocking js, lazy load images

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -6,7 +6,7 @@
 
     {{#if feature_image}}
       <a href="{{url}}" class="post-image">
-        <img class="featured-image lazyload" alt="{{title}}" loading="lazy" src="{{img_url feature_image}}" data-rjs="2">
+        <img class="featured-image lazy" alt="{{title}}" loading="lazy" data-src="{{img_url feature_image}}" data-rjs="2">
       </a>
     {{/if}}
     <div class="post-head">
