--- a/partials/author/widget-contributions.hbs
+++ b/partials/author/widget-contributions.hbs
@@ -1,5 +1,5 @@
 <script
-  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
+  data-src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
 >
 </script>
 <!-- Prepare a container for your calendar. -->
