--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -4,7 +4,7 @@
     <div class="left-desktop-nav">
       {{#if @site.icon}}
         <a class="logo" href="{{@site.url}}/">
-          <img src="{{@site.icon}}" alt="{{@site.title}}" data-rjs="2">
+          <img data-src="{{@site.icon}}" class="lazy" alt="{{@site.title}}" data-rjs="2">
         </a>
       {{/if}}
 
@@ -67,7 +67,7 @@
     <div class="left-mobile-nav">
       {{#if @site.icon}}
         <a class="logo" href="{{@site.url}}/">
-          <img src="{{@site.icon}}" alt="{{@site.title}}" data-rjs="2">
+          <img data-src="{{@site.icon}}" alt="{{@site.title}}" data-rjs="2">
         </a>
       {{/if}}
     </div>
