--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -1,6 +1,4 @@
-/*====================================================
-	COLOR VARIABLE FOR THEME
-====================================================*/
+// Colors
 @theme-color: #5eb9d7;            // theme color
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
@@ -36,19 +34,6 @@
 @rss-color: #ff6501;
 @reddit-color: #ff4500;
 
-// Series Colors
-@pandas-color:#7b5195;
-@flask-color:#4d5056;
-@code-color:#6691c8;
-@aws-color:#cc9543;
-@mysql-color:#5f6bbd;
-@mongdb-color:#86af96;
-@tableau-color:#d8a918;
-@excel-color: #74a184;
-@sql-color: #435c9e;
-@mapbox-color: #4264fb;
-@graphql-color: #E10098;
-@learning-apache-spark: #e77115;
 
 // Shadows
 @shadow-color: 0 0 3px rgba(65, 67, 144, 0.1);
