--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -1,3 +1,6 @@
+@import (css) url("//hackers.nyc3.cdn.digitaloceanspaces.com/fonts/dankmono/css/dank-mono.css");
+
+
 /* Global Styles */
 @import './global/variables.less';
 
