--- a/partials/author/author-card.hbs
+++ b/partials/author/author-card.hbs
@@ -9,9 +9,9 @@
   {{/if}}
   <div class="author-specs">
     {{#if profile_image}}
-      <a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="{{name}}'s' avatar" loading="lazy" class="lazy avatar"></a>
+      <a href="{{url}}" class="avatar-link"><img data-src="{{img_url profile_image}}" alt="{{name}}'s' avatar" loading="lazy" class="lazy avatar"></a>
     {{else}}
-      <a href="{{url}}" class="avatar-link"><img src="{{asset "default-user-image.jpg"}}" alt="{{name}}'s' avatar" class="avatar"></a>
+      <a href="{{url}}" class="avatar-link"><img data-src="{{asset "default-user-image.jpg"}}" alt="{{name}}'s' avatar" class="avatar"></a>
     {{/if}}
     <div class="details">
       <div class="author">
