--- a/partials/author/cover-author.hbs
+++ b/partials/author/cover-author.hbs
@@ -1,7 +1,7 @@
 <!-- Start Author Cover -->
 <div class="cover author-cover">
 	{{#if profile_image}}
-		<img src="{{profile_image}}" alt="{{name}}'s' avatar" class="avatar">
+		<img data-src="{{profile_image}}" alt="{{name}}'s' avatar" class="avatar">
 	{{/if}}
 	<h1 class="author-name">
 		{{name}}
