--- a/partials/projects/projects-dropdown.hbs
+++ b/partials/projects/projects-dropdown.hbs
@@ -12,23 +12,23 @@
                       <span>"Stockholm" Ghost Theme</span>
                   </li>
                   <li class="tokyoproject">
-                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ZillaAlt.png">
+                      <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ZillaAlt.png">
                       <span>"Tokyo" Ghost Theme</span>
                   </li>
                   <li class="linkbox-api">
-                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-logo-icon.png">
+                      <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-logo-icon.png">
                       <span>Linkbox API</span>
                   </li>
                   <li class="ghostthemesio">
-                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png">
+                      <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png">
                       <span>ghostthemes.io</span>
                   </li>
                   <li class="tableau-extraction">
-                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/tableau_icon.png">
+                      <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/tableau_icon.png">
                       <span>Tableau Extraction</span>
                   </li>
                   <li class="roblog">
-                      <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/roblog-icon.png">
+                      <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/roblog-icon.png">
                       <span>Roblog</span>
                   </li>
                 </ul>
@@ -43,23 +43,23 @@
                         <span>"Stockholm" Ghost Theme</span>
                     </li>
                     <li class="tokyoproject">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ZillaAlt.png">
+                        <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ZillaAlt.png">
                         <span>"Tokyo" Ghost Theme</span>
                     </li>
                     <li class="linkbox-api">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-logo-icon.png">
+                        <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/linkbox-logo-icon.png">
                         <span>Linkbox API</span>
                     </li>
                     <li class="ghostthemesio">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png">
+                        <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/ghostthemes-icon.png">
                         <span>ghostthemes.io</span>
                     </li>
                     <li class="tableau-extraction">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/tableau_icon.png">
+                        <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/tableau_icon.png">
                         <span>Tableau Extraction</span>
                     </li>
                     <li class="roblog">
-                        <img class="project-icon" src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/roblog-icon.png">
+                        <img class="project-icon" data-src="https://hackers.nyc3.cdn.digitaloceanspaces.com/img/projects/roblog-icon.png">
                         <span>Roblog</span>
                     </li>
                 </ul>
