--- a/partials/series/seriespreview.hbs
+++ b/partials/series/seriespreview.hbs
@@ -1,6 +1,6 @@
 <div class="seriespreview">
   <a href="/series/{{slug}}" title="{{name}}">
-    <img alt="{{title}}" class="lazy series-image" loading="lazy" src="{{img_url feature_image}}">
+    <img alt="{{title}}" class="lazy series-image" loading="lazy" data-src="{{img_url feature_image}}">
     <div class="series-info">
       <div class="series-info">
         <h2 class="series-title">{{meta_title}}</h2>
