--- a/post.hbs
+++ b/post.hbs
@@ -5,7 +5,7 @@
 		<article class="{{post_class}}">
 			{{#if feature_image}}
 				<div class="post-image">
-					<img alt="{{title}}" class="featured-image lazyload" src="{{img_url feature_image}}" data-rjs="2">
+					<img alt="{{title}}" class="featured-image lazy" data-src="{{img_url feature_image}}" data-rjs="2">
 				</div>
 			{{/if}}
 
