--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -171,7 +171,7 @@
 
 		.meta-item {
 			margin-right: 30px;
-			color: @text-color-light;
+			color: #5b6374;
 			font-size: 0.9em;
 			transition: @transition;
 
@@ -180,7 +180,7 @@
 			}
 
 			a {
-				color: @text-color-light;
+				color: #5b6374;
 				transition: @transition;
 
 				&:hover {
