--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -1,10 +1,26 @@
 @import "../global/variables.less";
 
 .tag-template {
-
   .page-container {
-    @media(max-width: @tablet-breakpoint){
+    @media(max-width: @tablet-breakpoint) {
       margin-top: 0;
+    }
+
+    .cover {
+      background: white;
+      padding: 60px;
+      text-align: center;
+      border-radius: 5px;
+      margin-bottom: 20px;
+
+      .tag-name {
+        font-size: 1.5em;
+
+        i {
+          font-size: 0.9em;
+          margin-right: 5px;
+        }
+      }
     }
   }
 
@@ -64,12 +80,13 @@
         width: 100%;
         height: auto;
       }
+
       .post-preview-body {
         display: flex;
         justify-content: space-between;
         @media(max-width: @mobile-breakpoint) {
-            padding-bottom: 0;
-            margin-bottom: 0;
+          padding-bottom: 0;
+          margin-bottom: 0;
         }
       }
 
@@ -100,7 +117,7 @@
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
-        font-size: .95em;
+        font-size: 0.95em;
         line-height: 1.25;
       }
 
@@ -139,38 +156,10 @@
   }
 
   .pagination {
-     margin: 40px auto 0;
-     @media(max-width: @tablet-breakpoint) {
-       margin: 30px auto;
-       width: 80%;
-     }
-  }
-}
-
-.tag-template {
-  .tag-image {
-    width: 100%;
-    height: 370px;
-    background-size: cover !important;
-  }
-
-  .post-title a {
-    font-size: 1em !important;
-    font-family: @header-font;
-  }
-}
-
-.tag-template .post-preview {
-  padding: 0 !important;
-}
-
-.tag-title {
-  color: white;
-}
-
-.tag-image {
-  margin-top: 30px;
-  @media(max-width: @mobile-breakpoint) {
-    display: none;
+    margin: 40px auto 0;
+    @media(max-width: @tablet-breakpoint) {
+      margin: 30px auto;
+      width: 80%;
+    }
   }
 }
