code snippet card styles

--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,7 +1,9 @@
 .post-content {
   .hljs {
     &.language-python,
-    &.python {
+    &.python,
+    &.language-groovy,
+    &.groovy, {
       border: 1px solid #d0dff2;
       background: #e5f1ff;
       color: #3c4b6a;
