--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -30,6 +30,7 @@
 @import './posts/languages/json.less';
 @import './posts/languages/config.less';
 @import './posts/languages/markup.less';
+@import './posts/languages/java.less';
 
 /* Baquette Box */
 @import 'https://hackers.nyc3.cdn.digitaloceanspaces.com/css/baguettebox.css';
