--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -69,7 +69,6 @@
 				}
 			}
 		}
-
 		/* Post header styles */
 		.post-header {
 			margin: 40px 0;
@@ -277,7 +276,7 @@
 				}
 			}
 
-			figure {
+			.kg-image-card {
 				width: 99%;
 				max-width: 99%;
 				margin: 30px auto;
@@ -327,7 +326,7 @@
 					padding: 10px;
 					background-color: rgba(33,69,138,.04);
 					color: #5e6167;
-					font-size: 0.8em;
+					font-size: 0.9em;
 					text-align: center;
 					white-space: normal;
 					line-height: 1.5;
@@ -345,6 +344,22 @@
 
 				&:hover {
 					cursor: zoom-in;
+				}
+			}
+
+			.kg-code-card {
+				width: 100%;
+				margin: 30px 0;
+
+				pre {
+					margin: 0;
+				}
+
+				figcaption {
+					font-size: 0.9em;
+					text-align: center;
+					padding-top: 5px;
+					opacity: .7;
 				}
 			}
 			/*   Start of Protip box */
