java language support

--- a/post.hbs
+++ b/post.hbs
@@ -53,7 +53,7 @@
 	{{> posts/afterpost}}
 	{{#contentFor "scripts"}}
 		<script src="{{asset "js/posts.js"}}"></script>
-		<script src="https://hackersandslackers.com/assets/js/includes/highlight.min.js"></script>
+		<script src="{{asset "js/includes/highlight.min.js"}}"></script>
 		<script>
 			hljs.configure({
 				tabReplace: '  ', // 2 spaces
