--- a/src/less/posts/languages/java.less
+++ b/src/less/posts/languages/java.less
@@ -1,8 +1,21 @@
 .post-content {
-    &.java,
-    &.language-java {
-      border: 1px solid #d0dff2;
-      background: #e5f1ff;
-      color: #3c4b6a;
+    .java,
+    .language-java {
+      border: 1px solid #f5e4e2;
+      background: #fff5f5;
+      color: #574949;
+
+      .keyword {
+        font-weight: 900;
+        color: #880700;
+      }
+
+      .class .title {
+        color: #0023d8;
+      }
+
+      .string {
+        color: #b23a3a;
+      }
     }
 }
