--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -163,11 +163,14 @@
 			li,
 			p {
 				text-align: left;
-				font-size: 1em;
+				font-size: 1.1em;
 				color: @post-text-color;
 				font-weight: 300;
 				font-family: @body-font;
 				-webkit-font-smoothing: auto;
+				@media(max-width: @mobile-breakpoint) {
+					font-size: 1em;
+				}
 			}
 
 			a {
@@ -189,13 +192,10 @@
 			}
 
 			p {
-				margin: 0 0 20px;
-				font-size: 1em;
-				line-height: 1.8em;
-				@media (max-width: @mobile-breakpoint) {
-					text-align: left;
-					line-height: 1.8 !important;
-					font-style: normal;
+				margin: 0 0 15px;
+				line-height: 1.5em;
+				@media(max-width: @mobile-breakpoint) {
+					line-height: 1.6em;
 				}
 			}
 
@@ -209,16 +209,10 @@
 				}
 
 				li {
-					font-style: normal;
-					font-variant: normal;
-					text-rendering: auto;
-					margin: 0 0 15px;
+					margin: 0 0 10px;
 					padding-left: 0;
 					line-height: 1.5;
 					display: block;
-					@media(max-width: @mobile-breakpoint) {
-						margin: 0 0 15px;
-					}
 
 					&::before {
 						display: inline-block;
@@ -350,6 +344,11 @@
 			.kg-code-card {
 				width: 100%;
 				margin: 30px 0;
+				position: relative;
+				@media(max-width: @mobile-breakpoint) {
+					.mobile-full-width();
+					width: unset;
+				}
 
 				pre {
 					margin: 0;
@@ -357,9 +356,12 @@
 
 				figcaption {
 					font-size: 0.9em;
-					text-align: center;
-					padding-top: 5px;
-					opacity: .7;
+			    text-align: center;
+			    position: absolute;
+			    top: 10px;
+			    right: 15px;
+			    z-index: 10;
+			    mix-blend-mode: color-burn;
 				}
 			}
 			/*   Start of Protip box */
@@ -455,8 +457,6 @@
 						top: 0;
 						left: 0;
 						right: 0;
-						margin-left: unset !important;
-						margin-right: unset !important;
 					}
 				}
 			}
